--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>file.operativo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
-  <name>file.operativo</name>
+  <name>ChargeFileOperativo</name>
   <!-- FIXME change it to the project's website -->
   <url>http:www.example.com</url>
 
@@ -21,7 +21,7 @@
   <dependencies>
      <!--https:mvnrepository.com/artifact/org.slf4j/slf4j-api -->
 		<!-- https:mvnrepository.com/artifact/log4j/log4j -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
 			<version>2.11.2</version>
@@ -31,7 +31,7 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>2.11.2</version>
-		</dependency>
+		</dependency> -->
 		
   </dependencies>
 
